# wasm-gba

./: Cargo.toml  README.md  build-release.sh  build.sh
src/: lib.rs  mem.rs  util.rs  wasm.rs
src/cpu/: mod.rs  pipeline.rs  status_reg.rs  thumb.rs
src/cpu/arm/: block_trans.rs  branch.rs  branch_ex.rs  data.rs  mod.rs  mul.rs  mul_long.rs  psr.rs  signed_trans.rs  single_trans.rs  swap.rs  swi.rs
src/cpu/arm_isa/: block_trans.rs  branch.rs  branch_ex.rs  data.rs  mod.rs  mul.rs  mul_long.rs  psr.rs  signed_trans.rs  single_trans.rs  swap.rs  swi.rs
src/cpu/isa/: data.rs  mod.rs
src/mem/: addrs.rs  framebuffer.rs  mod.rs  oam.rs  palette.rs
src/mem/io/: addrs.rs  dma.rs  graphics.rs  interrupt.rs  mod.rs
www/: .gitignore  index.css  index.html  index.js  package-lock.json  package.json
